# DR.dk

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: DECISIONS.md  INTERACTIVE_DIGEST_DESIGN.md  MILESTONE_01_INGEST.md  MILESTONE_02_ENRICHED_INGEST.md  MILESTONE_03_TRANSLATION.md  MILESTONE_04_SHORT_SUMMARIES.md  MILESTONE_05_DAILY_DIGEST_ASSEMBLY.md  MILESTONE_06_INTERACTIVE_DETAIL_LOOKUP.md  MILESTONE_07_TELEGRAM_INTERACTION_LAYER.md  PROJECT_STRUCTURE.md
src/dr_digest/: cli.py  config.py  models.py
src/dr_digest/digest/: __init__.py  lookup.py  menu_builder.py  short_summary.py
src/dr_digest/ingest/: __init__.py  article_fetch.py  dr_rss.py
src/dr_digest/publish/: __init__.py  telegram.py
src/dr_digest/storage/: __init__.py  files.py  state.py
src/dr_digest/summarize/: __init__.py  long_summary.py
src/dr_digest/translate/: __init__.py  argos_translate.py
tests/: test_cli.py
tests/digest/: __init__.py  test_lookup.py  test_menu_builder.py  test_short_summary.py
tests/fixtures/: dr_article.html  dr_senestenyt.xml
tests/ingest/: __init__.py  test_article_fetch.py  test_dr_rss.py
tests/publish/: __init__.py  test_telegram.py
tests/storage/: __init__.py  test_files.py  test_state.py
tests/summarize/: __init__.py  test_long_summary.py
tests/translate/: __init__.py  test_argos_translate.py
