[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dr-digest"
version = "0.1.0"
description = "Daily DR news digest project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
dr-digest = "dr_digest.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
